# mac-volume

./: README.md  package.json  setup.cfg  setup.py
scripts/: .mute.applescript  .unmute.applescript  .volume.applescript  mute  volume
tests/mac-volume/examples/: cli.sh
