# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-volume
version = 2019.5.6
url = https://github.com/looking-for-a-job/mac-volume
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = volume

[options]
install_requires = 
	setuptools
scripts = 
	scripts/.volume.applescript
	scripts/volume
